--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 <body>
 <div class="container">
     <div class="page-header">
-      <h1><span class="glyphicon glyphicon-record"></span> Audio Streamer <small>realtime to node</small></h1>
+      <h1><span class="glyphicon glyphicon-record"></span> Smart Speaking <small>pronounciation training</small></h1>
     </div>
 
     <button class="btn btn-primary" id="start-rec-btn">Start Recording</button>
@@ -26,6 +26,7 @@
     <div id="canvas-container">
         <canvas width="600" height="100" id="canvas"></canvas>
     </div>
+    <button class="btn btn-primary" id="play-user-btn">Play your voice</button>
 </div>
 
 </body>
